--- a/reshuk.html
+++ b/reshuk.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
 	<title>Reshuk Sapkota</title>
 	<link rel="icon"  href="ability.png" src="ability.png" >
@@ -8,20 +8,24 @@
 	
 </head>
 <body>
-<img src="">
+<h1 align="center" >`Reshuk Sapkota</h1>
+<hr>
 <h2 align="center"> 
-	<img src="home2.PNG" width="25px" height="25px"><br>Home
-	<div class="img"><br><img src="reshuki.jpg" width="300px" height="300px"></div><br>
+	<img src="C:\Users\DELL\Desktop\reshuk sapkota\home.png" width="50px" height="50px"><br>Home
+	<div class="img"><br><img src="ma1.jpg" width="955px" height="955px"></div><br>
 	
-	<p>NAME:RESHUK SAPKOTA<br>ADDRESS:BIRATNAGAR 11 NEPAL<br>EDUCATION: CURRENTLY STUDYING IN SHREE POKHARIYA SCHOOL.
+	<p >NAME:RESHUK SAPKOTA<br>ADDRESS:BIRATNAGAR 11 NEPAL<br>EDUCATION: CURRENTLY STUDYING IN SHREE POKHARIYA SCHOOL.
 		<br>Contact|Social-Site<br>
-		<a href="https://www.facebook.com/reshuk.sapkota"><img src="facebook2.png" width="20px" height="20px"></a> <a href="https://www.instagram.com/reshuk49/"><img src="instagram.png" width="20px" height="20px"></a><a href="https://github.com/Reshuksapkota"><img src="gh2.png" width="20px" height="20px"></a></p>
-		<p>
-			<a href="Memes.html">my memes</a>
-		</p>
-	<h3 align="center">
-©<br>Made by Reshuk Sapkota       Email:<a href="reshuksapkota@gmail.com">reshuksapkota@gmail.com</a></a></h3>
+		<a href="https://www.facebook.com/reshuk.sapkota" class="fa fa-facebook"><img src="facebook2.png" width="50px" height="50px"></a>
+		 <a href="https://www.instagram.com/reshuk49/"class="fa fa-instagram"><img src="instagram.png" width="50px" height="50px"></a>
+		<a href="https://github.com/Reshuksapkota" class="fa fa-github"><img src="gh.png" width="50px" height="50px"></a>
+	</p><br>
 </h2>
+<h3 align="center">
+©<br>Made by<a href="https://reshuksapkota.com.np/reshuk.html">Reshuk sapkota</a>     Email:<a href="reshuksapkota@gmail.com">reshuksapkota@gmail.com</a></a></h3>
+
+
+
 </body>
 </body>
 </html>
