--- a/reshuk.html
+++ b/reshuk.html
@@ -11,7 +11,7 @@
 <h1 align="center" >`Reshuk Sapkota</h1>
 <hr>
 <h2 align="center"> 
-	<img src="C:\Users\DELL\Desktop\reshuk sapkota\home.png" width="50px" height="50px"><br>Home
+	<img src="111.png" width="50px" height="50px"><br>Home
 	<div class="img"><br><img src="ma1.jpg" width="955px" height="955px"></div><br>
 	
 	<p >NAME:RESHUK SAPKOTA<br>ADDRESS:BIRATNAGAR 11 NEPAL<br>EDUCATION: CURRENTLY STUDYING IN SHREE POKHARIYA SCHOOL.
