--- a/reshuk.html
+++ b/reshuk.html
@@ -5,6 +5,8 @@
 	<link rel="icon"  href="ability.png" src="ability.png" >
 	<link rel="stylesheet" type="text/css" href="reshuk.css">
 	<link rel="stylesheet" type="text/css" href="Memes.html">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2255444259504239"
+     crossorigin="anonymous"></script>
 	
 </head>
 <body>
