--- a/reshuk.html
+++ b/reshuk.html
@@ -61,7 +61,7 @@
     <p class="about">Hi my name is reshuk sapkota.
     i'm 16 years old  <br>  beginner web-developer from nepal  </p>
     <p class="about">i was 14 years old when i started programming <br>
-    currently  i read in grade 9  </p>
+    currently  i read in grade 10  </p>
     <h3 style="font-size: 30px;">What can i do for you?</h3>
     <hr style="width: 30px; height: 5px; border: 4px solid rgb(255, 255, 0); ">
       <div class="images">
@@ -84,7 +84,8 @@
   <a href="https://facebook.com/reshuk.sapkota"><i class="fa fa-facebook" style="color: #000;"></i></a>
   <a href="https://instagram.com/reshuk49"><i class="fa fa-instagram" style="color: #000;"></i></a>
   <a href="https://github.com/reshuksap"><i class="fa fa-github" style="color: #000;"></i></a>
-   copyright 2022 reshuk sapkota 
+	Disclaimer this website is a sample of protfilo website Date,Age and Qualification may vary<br>
+   copyright 2023 reshuk sapkota 
 
 </footer>
 <script>
